Fix compilation/test after a new rebase
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>